--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   uuid: ^4.3.3
   flutter_riverpod: ^2.4.10
+  dio: ^5.4.1
 
 dev_dependencies:
   flutter_test:
